# strand

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  DAY2_PRIYA_VALIDATION.md  DEPLOY_RUNBOOK.md  PRODUCTION_READY.md  QA_MATRIX.md  README.md  REMAINING_PLAN.md  SECURITY.md  SECURITY_CHECKLIST.md  build_wsl.sh  core.json  credit.json  package.json  score.json  setup_wsl.sh  tsconfig.json
.agent/: API.md  ARCHITECTURE.md  DECISIONS.md  ENV.md  PROGRESS.md
.github/: FUNDING.yml
app/: .env.example  .gitignore  .npmrc  .vercelignore  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AISettingsProvider.tsx  CreditPanel.tsx  EarningsUpload.tsx  JobFlow.tsx  RequireWallet.tsx  SaasShell.tsx  ScoreBreakdown.tsx  ScoreGauge.tsx  SettingsModal.tsx  WalletProvider.tsx  WorkNFTCard.tsx  WorkRecordsDisplay.tsx
app/src/hooks/: useClientJobs.ts  useCreditLine.ts  useLenderPortfolio.ts  useSkills.ts  (+3 more)
app/supabase/: create_byok_table.sql
oracle/: .env.example  package.json  tsconfig.json
oracle/src/: chain.ts  grader.ts  health.ts  index.ts  logger.ts  pdf-parser.ts  worker-record-parser.ts
programs/strand-core/: Cargo.toml
programs/strand-core/src/: lib.rs
programs/strand-credit/: Cargo.toml
programs/strand-credit/src/: lib.rs
programs/strand-score/: Cargo.toml  build.rs
programs/strand-score/src/: lib.rs
scripts/: seed-demo.ts  setup-oracle-env.mjs
tests/: strand-core.ts  strand-credit.ts  strand-score.ts  tx-helpers.ts
(+54 files in other folders)
